added few more functionalities
